--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,6 +19,9 @@
     "emailTooltip": "Enter your email",
     "emailLabel": "Email",
     "emailSmall": "* Email field cannot be left blank",
+    "phoneTooltip":"Enter phone number",
+    "phoneLabel":"Phone",
+    "phoneSmall":"Phone number field cannot be left blank",
     "passwordTooltip": "Enter your password",
     "passwordLabel": "Password",
     "passwordSmall": "* Password field cannot be left blank",
