--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -19,12 +19,15 @@
     "emailTooltip":"emailinizi giriniz",
     "emailLabel":"email",
     "emailSmall":"* email alanı boş bırakılamaz",
+    "phoneTooltip":"Telefon numarası giriniz",
+    "phoneLabel":"Telefon",
+    "phoneSmall":"*Telefon no alanı boş bırakılamaz",
     "passwordTooltip":"Şifrenizi giriniz",
     "passwordLabel":"Şifre",
     "passwordSmall":"* Şifre alanı boş bırakılamaz",
     "confirmTooltip":"Şifre (Tekrar) giriniz",
     "confirmLabel":"Şifre (Tekrar) ",
-    "confirmSmall":"* Şifre tekrarı alanı boş bırakılamaz",
+    "confirmSmall":"* Şifre  alanı boş bırakılamaz",
     "confirmSmallSecond":"* Girdiğiniz Şifreler eşleşmiyor",
     "buttonLabel":"Üye ol"
   },
