--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -91,6 +91,9 @@
     "headerP": "You can edit the information you need here so that we can keep your experience at Orion Innovation at the best level.",
     "nameLabel": "Name",
     "surnameLabel": "Surname",
+    "usernameLabel":"Username",
+    "addressLabel":"address",
+    "phoneLabel":"Phone",
     "date": "Date of birth",
     "buttonLabel": "Update",
     "contactHeader": "Contact information",
