--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -91,6 +91,9 @@
     "headerP":"Orion Innovation’daki deneyiminizi en iyi seviyede tutabilmemiz için gereken bilgilerinizi buradan düzenleyebilirsiniz.",
     "nameLabel":"Ad",
     "surnameLabel":"Soyad",
+    "usernameLabel":"Kullanıcı adı",
+    "addressLabel":"adres",
+    "phoneLabel":"Telefon",
     "date":"Doğum Tarihi",
     "buttonLabel":"Güncelle",
     "contactHeader":"İletişim Bilgileri",
