--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -1,8 +1,9 @@
 {
   "loginForm":{
-    "usernameTooltip": "Kullanıcı adını giriniz" ,
-    "usernameLabel":"Kullanıcı adı",
-    "usernameSmall":"* Kullanıcı adı alanı boş bırakılamaz",
+    "header":"Giriş",
+    "emailTooltip": "Emaili giriniz" ,
+    "emailLabel":"Email",
+    "emailSmall":"* Email alanı boş bırakılamaz",
     "passwordTooltip":"Şifrenizi giriniz",
     "passwordLabel":"Şifre",
     "passwordSmall":"* Şifre alanı boş bırakılamaz",
@@ -14,9 +15,13 @@
   },
 
   "registerForm":{
+    "header":"Hadi aramıza katıl!",
     "nameTooltip":"Adınızı giriniz",
     "nameLabel":"Ad",
     "nameSmall":"* Ad alanı boş bırakılamaz",
+    "surnameTooltip":"Soyadınızı giriniz",
+    "surnameLabel":"Soyad",
+    "surnameSmall":"* Soyad alanı boş bırakılamaz",
     "usernameTooltip":"Kullanıcı adınızı giriniz",
     "usernameLabel":"Kullanıcı adı",
     "usernameSmall":"* Kullanıcı adı alanı boş bırakılamaz",
@@ -26,6 +31,15 @@
     "phoneTooltip":"Telefon numarası giriniz",
     "phoneLabel":"Telefon",
     "phoneSmall":"*Telefon no alanı boş bırakılamaz",
+    "addressTooltip":"Adresinizi giriniz",
+    "addressLabel":"Adres",
+    "addressSmall":"* Adres alanı boş bırakılamaz",
+    "bDateTooltip":"Doğum tarihinizi giriniz",
+    "bDateLabel":"Doğum Tarihi",
+    "bDateSmall":"* Doğum Tarihi alanı boş bırakılamaz",
+    "genderTooltip":"Cinsiyetinizi giriniz",
+    "genderLabel":"Cinsiyet",
+    "genderSmall":"* Cinsiyet alanı boş bırakılamaz",
     "passwordTooltip":"Şifrenizi giriniz",
     "passwordLabel":"Şifre",
     "passwordSmall":"* Şifre alanı boş bırakılamaz",
@@ -105,6 +119,7 @@
     "infoP":"Şifreniz en az bir harf, rakam veya özel karakter içermeli. Ayrıca şifreniz en az 8 karakterden oluşmalı.",
     "currentPass":"Mevcut Şifre",
     "newPass":"Yeni Şifre",
+    "newCPass":"Yeni Şifre Tekrar",
     "warnP":" Güvenliğiniz için adınız, soyadınız ve doğum tarihinizi içermeyen bir şifre belirleyin.",
     "buttonLabel":"Güncelle"
   },
