--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,8 +1,9 @@
 {
   "loginForm": {
-    "usernameTooltip": "Enter your username",
-    "usernameLabel": "Username",
-    "usernameSmall": "* Username field cannot be left blank",
+    "header":"Login",
+    "emailTooltip": "Enter your email",
+    "emailLabel": "email",
+    "emailSmall": "* Email field cannot be left blank",
     "passwordTooltip": "Enter your password",
     "passwordLabel": "Password",
     "passwordSmall": "* Password field cannot be left blank",
@@ -14,9 +15,13 @@
   },
 
   "registerForm": {
+    "header":"Come join us!",
     "nameTooltip": "Enter your name",
     "nameLabel": "Name",
     "nameSmall": "* Name field cannot be left blank",
+    "surnameTooltip":"Enter your surname",
+    "surnameLabel":"Surname",
+    "surnameSmall":"* Surname field cannot be left blank",
     "usernameTooltip": "Enter your username",
     "usernameLabel": "Username",
     "usernameSmall": "* Username field cannot be left blank",
@@ -26,6 +31,15 @@
     "phoneTooltip":"Enter phone number",
     "phoneLabel":"Phone",
     "phoneSmall":"Phone number field cannot be left blank",
+    "addressTooltip":"Enter your address",
+    "addressLabel":"Address",
+    "addressSmall":"* Address field cannot be left blank",
+    "bDateTooltip":"Enter your date of birth",
+    "bDateLabel":"Date of birth",
+    "bDateSmall":"* Date of Birth field cannot be left blank",
+    "genderTooltip":"Enter your gender",
+    "genderLabel":"Gender",
+    "genderSmall":"* Gender field cannot be left blank",
     "passwordTooltip": "Enter your password",
     "passwordLabel": "Password",
     "passwordSmall": "* Password field cannot be left blank",
@@ -105,6 +119,7 @@
     "infoP": "Your password must contain at least one letter, number or special character. Additionally, your password must consist of at least 8 characters.",
     "currentPass": "Current Password",
     "newPass": "New Password",
+    "newCPass":"New Password Again",
     "warnP": " For your security, choose a password that does not include your name, surname and date of birth.",
     "buttonLabel": "Update"
   },
