badge servis fixed

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -274,6 +274,7 @@
   },
   "cardForm":{
     "buttonLabel":"Add to Cart",
+    "search":"search...",
     "title":"Filter",
     "notStock":"Out of stock",
     "allProducts":"All Products",
