--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -274,6 +274,7 @@
   },
   "cardForm":{
     "buttonLabel":"Sepete ekle",
+    "search":"ara...",
     "title":"Filtrele",
     "notStock":"Stokta yok",
     "allProducts":"Tüm ürünler",
