favorites add-delete

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -285,7 +285,14 @@
     "Man": "Man",
     "Women": "Women",
     "Children": "Children"
+  },
+
+  "cardDetail":{
+    "header":"Description",
+    "title":"Product Description",
+    "quantity":"Product Stock Quantity(piece): "
   }
+
 
 
 }
