card-notfound-google-outh

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -302,6 +302,13 @@
     "buyerEmail":" Producer email: ",
     "productName":" Product Name:  ",
     "clearButton":"Empty Cart"
+  },
+  "contentOrdersForm":{
+    "header":"My orders",
+    "orderId":"Order Id",
+    "totalAmount":"Price",
+    "quantity":"Product Quantity (pcs): ",
+    "name":"Product Name: "
   }
 
 
